修改了一个头部文件菜单和资源文件的入口

--- a/MBAClub/WebRoot/WEB-INF/web.xml
+++ b/MBAClub/WebRoot/WEB-INF/web.xml
@@ -76,6 +76,11 @@
 		<servlet-name>NewsAudit</servlet-name>
 		<servlet-class>com.mbaclub.news.servlet.NewsAudit</servlet-class>
 	</servlet>
+  <servlet>
+    <servlet-name>FileListAction</servlet-name>
+    <servlet-class>com.mbaclub.news.servlet.FileListAction</servlet-class>
+  </servlet>
+
 
 	<servlet-mapping>
 		<servlet-name>Register</servlet-name>
@@ -129,6 +134,10 @@
 		<servlet-name>NewsAudit</servlet-name>
 		<url-pattern>/admin/news_audit</url-pattern>
 	</servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>FileListAction</servlet-name>
+    <url-pattern>/FileListAction</url-pattern>
+  </servlet-mapping>
 	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
